--- a/software/spiffs_files/html/css/switch.css
+++ b/software/spiffs_files/html/css/switch.css
@@ -1,74 +1,94 @@
-=transition($property: all)
-  transition: $property 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95)
+/* Checkbox switch */
 
-$gray: #EDF0F4
-$red: #D21626
-$green: #66B317
+.checkbox-switch {
+    cursor: pointer;
+    display: inline-block;
+    overflow: hidden;
+    position: relative;
+    text-align: left;
+    width: 80px;
+    height: 30px;
+    -webkit-border-radius: 30px;
+    border-radius: 30px;
+    line-height: 1.2;
+    font-size: 14px;
+}
 
-body
-  background-color: $gray
-  font-family: 'Helvetica Rounded', 'Arial Rounded MT Bold','Montserrat', sans-serif
-  color: #fff
+.checkbox-switch input.input-checkbox {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 80px;
+	height: 30px;
+	padding: 0;
+	margin: 0;
+	opacity: 0;
+	z-index: 2;
+	cursor: pointer;
+}
 
-.toggleWrapper
-  position: absolute
-  top: 50%
-  left: 50%
-  overflow: hidden
-  transform: translate3d(-50%, -50%, 0)
-  input
-    position: absolute
-    left: -99em
+.checkbox-switch .checkbox-animate {
+    position: relative;
+    width: 80px;
+    height: 30px;
+    background-color: #95a5a6;
+    -webkit-transition: background 0.25s ease-out 0s;
+    transition: background 0.25s ease-out 0s;
+}
 
-.toggle
-  cursor: pointer
-  display: inline-block
-  position: relative
-  width: 120px
-  height: 50px
-  background: $red
-  //border: 4px solid darken($gray, 10%)
-  border-radius: 5px
+.checkbox-switch .checkbox-animate:before {
+	content: "";
+	display: block;
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	background-color: #7f8c8d;
+	top: 5px;
+	left: 5px;
+	 -webkit-transition: left 0.3s ease-out 0s;
+    transition: left 0.3s ease-out 0s;
+    z-index: 10;
+}
 
-  +transition
-  &:before, &:after
-    position: absolute
-    line-height: 50px
-    font-size: 14px
-    z-index: 2
-    +transition
-  &:before 
-    content: 'OFF'
-    left: 20px
-    color: $red
- 
-  &:after 
-    content: 'ON'
-    right: 20px
-    color: #fff
-  
-.toggle__handler
-  display: inline-block
-  position: relative
-  z-index: 1
-  background: #fff
-  width: 65px
-  height: 44px
-  border-radius: 3px
-  top: 3px
-  left: 3px
-  +transition
-  transform: translateX(0px)
+.checkbox-switch input.input-checkbox:checked + .checkbox-animate {
+	background-color: #2ecc71;
+}
 
-input:checked
-  + .toggle
-    background: $green
-    &:before
-      color: #fff
-    &:after
-      color: $green
-    .toggle__handler
-      width: 54px
-      transform: translateX(60px)
-      border-color: #fff
+.checkbox-switch input.input-checkbox:checked + .checkbox-animate:before {
+	left: 55px;
+	background-color: #27ae60;
+}
 
+.checkbox-switch .checkbox-off,
+.checkbox-switch .checkbox-on {
+	float: left;
+	color: #fff;
+	font-weight: 700;
+	padding-top: 6px;
+	 -webkit-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s;
+}
+
+.checkbox-switch .checkbox-off {
+	margin-left: 30px;
+	opacity: 1;
+}
+
+.checkbox-switch .checkbox-on {
+	display: none;
+	float: right;
+	margin-right: 35px;
+	opacity: 0;
+}
+
+.checkbox-switch input.input-checkbox:checked + .checkbox-animate .checkbox-off {
+	display: none;
+	opacity: 0;
+}
+
+.checkbox-switch input.input-checkbox:checked + .checkbox-animate .checkbox-on {
+	display: block;
+	opacity: 1;
+}
